--- a/chatproject/chat/templates/chat/index.html
+++ b/chatproject/chat/templates/chat/index.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="{% static 'style.css' %}" />
   </head>
   <body>
-   
     <div class="mt-4 m-auto p-0 w-50 h-90 container">
       <!-- container -->
       <div
@@ -140,7 +139,8 @@
           <div class="col-1 p-0 m-0" id="attachment">
             <!-- <input class="form-control" type="file"> -->
             <label>
-              <i class="fa fa-2x fa-camera" id="file-btn"></i>
+              <!-- <i class="fa fa-2x fa-camera" id="file-btn"></i> -->
+              <img src="{% static 'icons8-paperclip-48.png' %}" id="file-btn" />
               <input type="file" />
             </label>
           </div>
