--- a/chatproject/chat/templates/chat/room.html
+++ b/chatproject/chat/templates/chat/room.html
@@ -13,6 +13,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <!-- <link rel="stylesheet" href="../../fontawesome-free-6.4.2-web/css/all.min.css"> -->
   </head>
   <body>
     <div class="mt-4 m-auto p-0 w-50 container">
@@ -125,7 +126,7 @@
               id="emoji"
               class="border-0 m-0 rounded-4"
             >
-              <svg
+              <!-- <svg
                 xmlns="emoji-smile.svg"
                 width="28"
                 height="28"
@@ -138,7 +139,11 @@
                 <path
                   d="M4.285 9.567a.5.5 0 0 1 .683.183A3.498 3.498 0 0 0 8 11.5a3.498 3.498 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.498 4.498 0 0 1 8 12.5a4.498 4.498 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683zM7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"
                 />
-              </svg>
+              </svg> -->
+              <img
+                style="width: 40px; height: 40px"
+                src="{% static 'icons8-face-48.png' %}"
+              />
             </button>
             <!-- emoji list -->
             <div
@@ -219,22 +224,28 @@
           <!-- attachment -->
           <div class="col-1 p-0 m-0" id="attachment">
             <label class="w-26 h-26">
-              <i
+              <!-- <i
                 class="fa fa-paperclip"
                 style="font-size: 30px; transform: scaleX(-1)"
                 id="file-btn"
-              ></i>
+              ></i> -->
+              <img src="{% static 'icons8-paperclip-48.png' %}" id="file-btn" />
               <input type="file" />
             </label>
           </div>
           <!-- send button -->
           <div class="col-1 p-0 m-0" id="send-sagi">
             <button class="border-0 p-0 m-0" id="chat-message-submit">
-              <i
+              <!-- <i
                 class="fa fa-microphone"
                 style="font-size: 30px; transform: rotateY('angle')"
                 id="send"
-              ></i>
+              ></i> -->
+              <img
+                style="height: 40px; width: 40px"
+                src="{% static 'icons8-microphone-48.png' %}"
+                id="send"
+              />
             </button>
           </div>
         </div>
@@ -658,16 +669,17 @@
       document.addEventListener("DOMContentLoaded", () => {let textContent = `${navigator.onLine ? "Online" : "Offline"}`});
 
       const send = document.getElementById("send");
-      setInterval(check_inp, 1);
-      function check_inp() {
+      setInterval(() => {
         if (input.value !== "") {
-          send.setAttribute("class", "fa fa-send");
-          send.style.fontSize = "23px";
+          send.setAttribute("src", "{% static 'icons8-send-30.png' %}");
+          send.style.width = "30px";
+          send.style.height = "30px";
         } else {
-          send.setAttribute("class", "fa fa-microphone");
-          send.style.fontSize = "30px";
+          send.setAttribute("src", "{% static 'icons8-microphone-48.png' %}");
+          send.style.height = "40px";
+          send.style.width = "40px";
         }
-      }
+      }, 1);
 
       chatSocket.onclose = () => {console.error('Chat socket closed unexpectedly')}
       // chatSocket.onclose = function(e) {
