--- a/chatproject/chat/static/style.css
+++ b/chatproject/chat/static/style.css
@@ -81,7 +81,6 @@ ul {
 }
 
 #chat-log {
-    /* background-color: rgb(red, green, blue, 1); */
     height: 500px;
     overflow-y: scroll;
     padding: 0.5rem;
@@ -138,16 +137,13 @@ ul {
     text-align: center;
 }
 
-#send {
-    width: 20px;
-    height: 20px;
-}
-
 #file-btn {
-    height: 35px;
-    width: 35px;
+    height: 100%;
+    width: 100%;
     margin-bottom: 5px;
 }
+
+#img-prof {}
 
 input[type="file"] {
     display: none;
